--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-hooks": "^1.0.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "redux": "^4.2.0",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
